--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "name": "Rust",
+  "image": "mcr.microsoft.com/devcontainers/rust:0-1-bullseye",
   "features": {
   }
 }
