add copilot extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,12 @@
   "name": "Rust",
   "image": "mcr.microsoft.com/devcontainers/rust:0-1-bullseye",
   "features": {
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "GitHub.copilot"
+      ]
+    }
   }
 }
